typescript/checker/tests/conformance/statements/withStatements/withStatements.ts.stderr
error: TS2410
 --> $DIR/tests/conformance/statements/withStatements/withStatements.ts:2:1
  |
2 | with (x) {
  | ^^^^

